css and html setup

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-</head>
-<body>
-    
-</body>
+    <!-- CSS Link-->
+    <link rel="stylesheet" href="./css/style.css" />
+    <!-- FontAwesome Kit -->
+    <script
+      src="https://kit.fontawesome.com/655844cb3c.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+<h1>hi</h1>
+    </header>
+    <!-- Main  -->
+    <main>
+
+    </main>
+    <!-- Footer -->
+    <footer>
+
+    </footer>
+    <!-- JS Link -->
+     <script src="./js/script.js"></script>
+  </body>
 </html>
