--- a/index.html
+++ b/index.html
@@ -14,18 +14,58 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-<h1>hi</h1>
+    <header class="header">
+      <div class="container nav">
+        <div class="nav__logo">AR SHAKIR</div>
+        <nav class="nav__menu">
+          <ul class="nav__list">
+            <li>
+              <a href="#">Product</a> <i class="fa-solid fa-angle-down"></i>
+            </li>
+            <li>
+              <a href="#">Template</a> <i class="fa-solid fa-angle-down"></i>
+            </li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Pricing</a></li>
+          </ul>
+        </nav>
+        <div class="nav__buttons">
+          <button>Sigin</button>
+          <button>Start Free</button>
+        </div>
+      </div>
     </header>
     <!-- Main  -->
     <main>
-
+      <!-- Hero Section -->
+      <section class="heroSection">
+        <div class="container hero">
+          <div class="hero__content">
+            <h1>Managing freelance payments has never been easier</h1>
+            <p>
+              Yet bed any for travelling assistance indulgence unpleasing. Not
+              thoughts all exercise blessing.
+            </p>
+            <div class="hero__buttons">
+              <button>Get Started</button>
+              <button>
+                <i class="fa-solid fa-circle-play"></i>See How It Works
+              </button>
+            </div>
+            <div class="hero__bottomContent">
+                <p><i class="fa-solid fa-circle-check"></i>Free Register</p>
+                <p><i class="fa-solid fa-circle-check"></i>Great Service</p>
+            </div>
+          </div>
+          <div class="hero__img">
+            <img src="./assets/images/hero__img.png" alt="hero image" />
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
-    <footer>
-
-    </footer>
+    <footer></footer>
     <!-- JS Link -->
-     <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
