companies banner section done

--- a/index.html
+++ b/index.html
@@ -53,12 +53,36 @@
               </button>
             </div>
             <div class="hero__bottomContent">
-                <p><i class="fa-solid fa-circle-check"></i>Free Register</p>
-                <p><i class="fa-solid fa-circle-check"></i>Great Service</p>
+              <p><i class="fa-solid fa-circle-check"></i>Free Register</p>
+              <p><i class="fa-solid fa-circle-check"></i>Great Service</p>
             </div>
           </div>
           <div class="hero__img">
             <img src="./assets/images/hero__img.png" alt="hero image" />
+          </div>
+        </div>
+      </section>
+      <!-- Companies Section -->
+      <section class="companiesSection">
+        <div class="container companies">
+          <p>Over 32k+ software businesses growing with AR Shakir.</p>
+          <div class="companies__logos">
+            <img
+              src="./assets/images/OpenZeppelin__logo.png"
+              alt="OpenZeppelin__logo"
+            />
+            <img src="./assets/images/Oracle__logo.png" alt="Oracle__logo" />
+            <img
+              src="./assets/images/Morpheus__logo.png"
+              alt="Morpheus__logo"
+            />
+            <img src="./assets/images/Samsung__logo.png" alt="Samsung__logo" />
+            <img src="./assets/images/monday__logo.png" alt="monday__logo" />
+            <img src="./assets/images/Segment__logo.png" alt="Segment__logo" />
+            <img
+              src="./assets/images/Protonet__logo.png"
+              alt="Protonet__logo"
+            />
           </div>
         </div>
       </section>
