track your payement section done

--- a/index.html
+++ b/index.html
@@ -135,6 +135,67 @@
           </div>
         </div>
       </section>
+      <!-- Track Payment Section  -->
+      <section class="trackPayment">
+        <div class="container track">
+          <div class="track__box">
+            <div class="track__card track__card1">
+                <img src="./assets/images/testomonial__img1.png" alt="pp">
+              <div class="track__cardContent">
+                <div class="track__amount">+ $28,900</div>
+                <div class="track__text">Received from Michael V</div>
+              </div>
+            </div>
+
+            <div class="track__card track__card2">
+                <img src="./assets/images/testomonial__img2.png" alt="pp">
+              <div class="content">
+                <div class="track__amount">+ $28,900</div>
+                <div class="track__text">Received from Michael V</div>
+              </div>
+            </div>
+
+            <div class="track__card track__card3">
+                <img src="./assets/images/testomonial__img1.png" alt="pp">
+              <div class="content">
+                <div class="track__amount">+ $28,900</div>
+                <div class="track__text">Received from Michael V</div>
+              </div>
+            </div>
+
+            <div class="track__card track__card4">
+                <img src="./assets/images/testomonial__img2.png" alt="pp">
+              <div class="content">
+                <div class="track__amount">+ $28,900</div>
+                <div class="track__text">Received from Michael V</div>
+              </div>
+            </div>
+          </div>
+          <div class="track__content">
+            <p>WHY CHOOSE US</p>
+            <h2>Track your payments on the go with the best way possible</h2>
+            <p>
+              Indulgence way everything joy alteration boisterous the
+              attachment. Party we years to order allow asked of.
+            </p>
+            <hr />
+            <div class="track__checks">
+              <div class="track__check">
+                <i class="fa-solid fa-circle-check"></i>
+                <p>Get Overview at a glance</p>
+              </div>
+              <div class="track__check">
+                <i class="fa-solid fa-circle-check"></i>
+                <p>Deoposit funds easily, securlity</p>
+              </div>
+              <div class="track__check">
+                <i class="fa-solid fa-circle-check"></i>
+                <p>Get Live Support</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer></footer>
