save money with proper transaction section done

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="container track">
           <div class="track__box">
             <div class="track__card track__card1">
-                <img src="./assets/images/testomonial__img1.png" alt="pp">
+              <img src="./assets/images/testomonial__img1.png" alt="pp" />
               <div class="track__cardContent">
                 <div class="track__amount">+ $28,900</div>
                 <div class="track__text">Received from Michael V</div>
@@ -148,7 +148,7 @@
             </div>
 
             <div class="track__card track__card2">
-                <img src="./assets/images/testomonial__img2.png" alt="pp">
+              <img src="./assets/images/testomonial__img2.png" alt="pp" />
               <div class="content">
                 <div class="track__amount">+ $28,900</div>
                 <div class="track__text">Received from Michael V</div>
@@ -156,7 +156,7 @@
             </div>
 
             <div class="track__card track__card3">
-                <img src="./assets/images/testomonial__img1.png" alt="pp">
+              <img src="./assets/images/testomonial__img1.png" alt="pp" />
               <div class="content">
                 <div class="track__amount">+ $28,900</div>
                 <div class="track__text">Received from Michael V</div>
@@ -164,7 +164,7 @@
             </div>
 
             <div class="track__card track__card4">
-                <img src="./assets/images/testomonial__img2.png" alt="pp">
+              <img src="./assets/images/testomonial__img2.png" alt="pp" />
               <div class="content">
                 <div class="track__amount">+ $28,900</div>
                 <div class="track__text">Received from Michael V</div>
@@ -193,6 +193,31 @@
                 <p>Get Live Support</p>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- Save Money with Proper Transaction Section  -->
+      <section class="properTransaction">
+        <div class="container transaction">
+          <div class="transaction__content">
+            <p style="color: #3734a9; font-weight: 700; font-size: 14px">
+              WHY CHOOSE US
+            </p>
+            <h2>Save money with proper transaction</h2>
+            <p style="width: 60%">
+              We so opinion friends me message as delight. Whole front do of
+              plate heard oh ought. His defective nor convinced residence own.
+            </p>
+            <div class="transaction__card">
+              <p>
+                Wise busy past both park when an ye no. Nay likely her length
+                sooner thrown sex lively income. The expense windows .
+              </p>
+              <p>- Mike Taylor, Web Designer</p>
+            </div>
+          </div>
+          <div class="transaction__img">
+            <img src="./assets/images/saveMoney__img.png" alt="save money" />
           </div>
         </div>
       </section>
