features section done

--- a/index.html
+++ b/index.html
@@ -221,6 +221,44 @@
           </div>
         </div>
       </section>
+      <!-- features Section -->
+      <section class="features2">
+        <div class="container feature2">
+          <div class="feature2__content">
+            <h2>Features that blows mind</h2>
+            <p>
+              We so opinion friends me message as delight. Whole front do of
+              plate heard oh ought. His defective nor convinced residence own.
+            </p>
+          </div>
+          <div class="features2__cards">
+            <div class="features2__card">
+              <img src="./assets/images/cardLogo__3.png" alt="logo" />
+              <p>Really boy law county she unable her sister</p>
+              <p>
+                We so opinion friends me message as delight. Whole front do of
+                plate heard oh ought.
+              </p>
+            </div>
+            <div class="features2__card">
+              <img src="./assets/images/cardLogo__3.png" alt="logo" />
+              <p>Among sex are leave law built now</p>
+              <p>
+                We so opinion friends me message as delight. Whole front do of
+                plate heard oh ought.
+              </p>
+            </div>
+            <div class="features2__sideCards">
+              <div class="features2__sideCard">
+                <p>Merits behind on afraid or warmly</p>
+              </div>
+              <div class="features2__sideCard">
+                <p>Believing neglected so so allowance existence</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer></footer>
