rating banner section done

--- a/index.html
+++ b/index.html
@@ -299,6 +299,38 @@
           </div>
         </div>
       </section>
+      <!-- Rating Banner Section -->
+      <section class="bannerSection">
+        <div class="container banner">
+          <div class="banner__content">
+            <p>We speak with our powerfull statistics</p>
+          </div>
+          <div class="vertical-line"></div>
+          <div class="banner__ratings">
+            <div class="banner__rating">
+              <h2>1M+</h2>
+              <div class="banner__user">
+                <i class="fa-solid fa-user"></i>
+                <p>Active Users</p>
+              </div>
+            </div>
+            <div class="banner__rating">
+              <h2>30K+</h2>
+              <div class="banner__user">
+                <i class="fa-solid fa-star"></i>
+                <p>Active Users</p>
+              </div>
+            </div>
+            <div class="banner__rating">
+              <h2>$252M</h2>
+              <div class="banner__user">
+                <i class="fa-solid fa-star"></i>
+                <p>Active Users</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer></footer>
