recent blog section done

--- a/index.html
+++ b/index.html
@@ -331,6 +331,56 @@
           </div>
         </div>
       </section>
+      <!-- Recent Blogs Section  -->
+      <section class="recentBlogs">
+        <div class="container blog">
+          <h2>Recent Blogs</h2>
+          <div class="blog__contents">
+            <div class="blog__content">
+              <p>BEST PRACTICES</p>
+              <p>
+                In design active temper be uneasy. Thirty for remove plenty
+                regard.
+              </p>
+              <button>Read More <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="blog__img">
+              <img src="./assets//images/Blogs__img1.png" alt="blog img" />
+            </div>
+          </div>
+          <div class="blog__cards">
+            <div class="blog__card">
+              <div class="blog__cardContent">
+                <p>BEST PRACTICES</p>
+                <p>Partiality on or continuing particular principles as.</p>
+              </div>
+              <div class="blog__cardImg">
+                <img src="./assets/images/Blogs__img2.png" alt="" />
+              </div>
+            </div>
+            <div class="blog__card">
+              <div class="blog__cardContent">
+                <p>BEST PRACTICES</p>
+                <p>Village did removed enjoyed explain</p>
+              </div>
+              <div class="blog__cardImg">
+                <img src="./assets/images/Blogs__img3.png" alt="" />
+              </div>
+            </div>
+            <div class="blog__card">
+              <div class="blog__cardContent">
+                <p>BEST PRACTICES</p>
+                <p>
+                  Wise busy past both park when an ye no. Nay likely her length.
+                </p>
+              </div>
+              <div class="blog__cardImg">
+                <img src="./assets/images/Blogs__img4.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer></footer>
