FAQ section done

--- a/index.html
+++ b/index.html
@@ -381,6 +381,78 @@
           </div>
         </div>
       </section>
+      <!-- FAQ Section  -->
+      <section class="container FAQSection">
+        <h2>Frequently asked questions</h2>
+        <div class="FAQ">
+          <div class="FAQ__contents">
+            <div class="FAQ__content">
+              <p>
+                The expense windows adapted sir. Wrong widen drawn.
+                <i class="fa-solid fa-plus"></i>
+              </p>
+              <p>
+                Offending belonging promotion provision an be oh consulted
+                ourselves it. Blessing welcomed ladyship she met humoured sir
+                breeding her.
+              </p>
+            </div>
+            <div class="FAQ__content">
+              <p>
+                Six curiosity day assurance bed necessary?
+                <i class="fa-solid fa-plus"></i>
+              </p>
+              <p>
+                Offending belonging promotion provision an be oh consulted
+                ourselves it. Blessing welcomed ladyship she met humoured sir
+                breeding her.
+              </p>
+            </div>
+            <div class="FAQ__content">
+              <p>
+                Produce say the ten moments parties?
+                <i class="fa-solid fa-plus"></i>
+              </p>
+              <p>
+                Offending belonging promotion provision an be oh consulted
+                ourselves it. Blessing welcomed ladyship she met humoured sir
+                breeding her.
+              </p>
+            </div>
+            <div class="FAQ__content">
+              <p>
+                Simple innate summer fat appear basket his desire joy?
+                <i class="fa-solid fa-plus"></i>
+              </p>
+              <p>
+                Offending belonging promotion provision an be oh consulted
+                ourselves it. Blessing welcomed ladyship she met humoured sir
+                breeding her.
+              </p>
+            </div>
+            <div class="FAQ__content">
+              <p>
+                Outward clothes promise at gravity do excited?
+                <i class="fa-solid fa-plus"></i>
+              </p>
+              <p>
+                Offending belonging promotion provision an be oh consulted
+                ourselves it. Blessing welcomed ladyship she met humoured sir
+                breeding her.
+              </p>
+            </div>
+          </div>
+          <div class="FAQ__questions">
+            <i class="fa-solid fa-message"></i>
+            <p>Do you have more questions?</p>
+            <p>
+              End-to-end payments and financial management in a single solution.
+              Meet the right platform to help realize.
+            </p>
+            <button>Shoot a Direct Mail</button>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer></footer>
