discover section done

--- a/index.html
+++ b/index.html
@@ -453,6 +453,13 @@
           </div>
         </div>
       </section>
+      <!-- Discover Section -->
+      <section class="discoverSection">
+        <div class="container discover">
+          <h2>Discover a better way to manage spendings</h2>
+          <button>Get Started Now</button>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer></footer>
