footer section done

--- a/index.html
+++ b/index.html
@@ -462,7 +462,50 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer></footer>
+    <footer class="footerSection">
+      <div class="container footer">
+        <div class="footer__contents">
+          <div class="footer__content">
+            <p>AR Shakir</p>
+            <p>Finance helps companies manage payments easily.</p>
+            <div class="footer__icon">
+              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-facebook-messenger"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-solid fa-infinity"></i>
+            </div>
+          </div>
+          <div class="footer__content">
+            <p>Company</p>
+            <a href="#">About Us</a>
+            <a href="#">Careers</a>
+            <a href="#">Blog</a>
+            <a href="#">Pricing</a>
+          </div>
+          <div class="footer__content">
+            <p>Resources</p>
+            <a>Proposal Template</a>
+            <a>Invoice Template</a>
+            <a>Tuturoial</a>
+            <a>How to write a contract</a>
+          </div>
+          <div class="footer__content">
+            <p>Join Our Newsletter</p>
+            <div class="join">
+              <input type="email" placeholder="Your email address" />
+              <button>Subscribe</button>
+            </div>
+            <p>
+              * Will send you weekly updates for your better finance management.
+            </p>
+          </div>
+        </div>
+        <hr />
+      </div>
+      <div class="container copyright">
+        <p>Copyright @ AR Shakir 2022. All Rights Reserved.</p>
+      </div>
+    </footer>
     <!-- JS Link -->
     <script src="./js/script.js"></script>
   </body>
