hover effect for button and the dropdown menu is done

--- a/index.html
+++ b/index.html
@@ -19,11 +19,27 @@
         <div class="nav__logo">AR SHAKIR</div>
         <nav class="nav__menu">
           <ul class="nav__list">
-            <li>
-              <a href="#">Product</a> <i class="fa-solid fa-angle-down"></i>
+            <li class="dropdown">
+              <a href="#" class="dropdown__toggle"
+                >Product
+                <i class="fa-solid fa-angle-down"></i>
+              </a>
+              <ul class="dropdown__menu">
+                <li><a href="#">Product 1</a></li>
+                <li><a href="#">Product 2</a></li>
+                <li><a href="#">Product 3</a></li>
+              </ul>
             </li>
-            <li>
-              <a href="#">Template</a> <i class="fa-solid fa-angle-down"></i>
+            <li class="dropdown">
+              <a href="#" class="dropdown__toggle"
+                >Template
+                <i class="fa-solid fa-angle-down"></i>
+              </a>
+              <ul class="dropdown__menu">
+                <li><a href="#">Template A</a></li>
+                <li><a href="#">Template B</a></li>
+                <li><a href="#">Template C</a></li>
+              </ul>
             </li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Pricing</a></li>
