--- a/index.html
+++ b/index.html
@@ -82,23 +82,53 @@
       <section class="companiesSection">
         <div class="container companies">
           <p>Over 32k+ software businesses growing with AR Shakir.</p>
-          <div class="companies__logos">
-            <img
-              src="./assets/images/OpenZeppelin__logo.png"
-              alt="OpenZeppelin__logo"
-            />
-            <img src="./assets/images/Oracle__logo.png" alt="Oracle__logo" />
-            <img
-              src="./assets/images/Morpheus__logo.png"
-              alt="Morpheus__logo"
-            />
-            <img src="./assets/images/Samsung__logo.png" alt="Samsung__logo" />
-            <img src="./assets/images/monday__logo.png" alt="monday__logo" />
-            <img src="./assets/images/Segment__logo.png" alt="Segment__logo" />
-            <img
-              src="./assets/images/Protonet__logo.png"
-              alt="Protonet__logo"
-            />
+          <div class="companies__logosWrapper">
+            <div class="companies__logos">
+              <img
+                src="./assets/images/OpenZeppelin__logo.png"
+                alt="OpenZeppelin__logo"
+              />
+              <img src="./assets/images/Oracle__logo.png" alt="Oracle__logo" />
+              <img
+                src="./assets/images/Morpheus__logo.png"
+                alt="Morpheus__logo"
+              />
+              <img
+                src="./assets/images/Samsung__logo.png"
+                alt="Samsung__logo"
+              />
+              <img src="./assets/images/monday__logo.png" alt="monday__logo" />
+              <img
+                src="./assets/images/Segment__logo.png"
+                alt="Segment__logo"
+              />
+              <img
+                src="./assets/images/Protonet__logo.png"
+                alt="Protonet__logo"
+              />
+              <img
+                src="./assets/images/OpenZeppelin__logo.png"
+                alt="OpenZeppelin__logo"
+              />
+              <img src="./assets/images/Oracle__logo.png" alt="Oracle__logo" />
+              <img
+                src="./assets/images/Morpheus__logo.png"
+                alt="Morpheus__logo"
+              />
+              <img
+                src="./assets/images/Samsung__logo.png"
+                alt="Samsung__logo"
+              />
+              <img src="./assets/images/monday__logo.png" alt="monday__logo" />
+              <img
+                src="./assets/images/Segment__logo.png"
+                alt="Segment__logo"
+              />
+              <img
+                src="./assets/images/Protonet__logo.png"
+                alt="Protonet__logo"
+              />
+            </div>
           </div>
         </div>
       </section>
