carousel effect for testomonial section is done

--- a/index.html
+++ b/index.html
@@ -315,34 +315,108 @@
               plate heard oh ought. His defective nor convinced residence own.
             </p>
           </div>
-          <div class="testomonial__cards">
-            <div class="testomonial__card">
-              <div class="testomonial__cardContent">
-                <p>
-                  Wise busy past both park when an ye no. Nay likely her length
-                  sooner thrown sex lively income. The expense windows .
-                  Blessing welcomed ladyship.
-                </p>
-                <p>- Mike Taylor, Web Designer</p>
+          <div class="testomonial__cardsWrapper">
+            <div class="testomonial__cards">
+              <div class="testomonial__card">
+                <div class="testomonial__cardContent">
+                  <p>
+                    Wise busy past both park when an ye no. Nay likely her
+                    length sooner thrown sex lively income. The expense windows
+                    . Blessing welcomed ladyship.
+                  </p>
+                  <p>- Mike Taylor, Web Designer</p>
+                </div>
+                <div class="testomonial__cardContentImg">
+                  <img
+                    src="./assets/images/testomonial__img1.png"
+                    alt="person"
+                  />
+                </div>
               </div>
-              <div class="testomonial__cardContentImg">
-                <img src="./assets/images/testomonial__img1.png" alt="person" />
+              <div class="testomonial__card">
+                <div class="testomonial__cardContent">
+                  <p>
+                    Wise busy past both park when an ye no. Nay likely her
+                    length sooner thrown sex lively income. The expense windows
+                    . Blessing welcomed ladyship.
+                  </p>
+                  <p>- Mike Taylor, Web Designer</p>
+                </div>
+                <div class="testomonial__cardContentImg">
+                  <img
+                    src="./assets/images/testomonial__img2.png"
+                    alt="person"
+                  />
+                </div>
               </div>
-            </div>
-            <div class="testomonial__card">
-              <div class="testomonial__cardContent">
-                <p>
-                  Wise busy past both park when an ye no. Nay likely her length
-                  sooner thrown sex lively income. The expense windows .
-                  Blessing welcomed ladyship.
-                </p>
-                <p>- Mike Taylor, Web Designer</p>
+              <div class="testomonial__card">
+                <div class="testomonial__cardContent">
+                  <p>
+                    Wise busy past both park when an ye no. Nay likely her
+                    length sooner thrown sex lively income. The expense windows
+                    . Blessing welcomed ladyship.
+                  </p>
+                  <p>- Mike Taylor, Web Designer</p>
+                </div>
+                <div class="testomonial__cardContentImg">
+                  <img
+                    src="./assets/images/testomonial__img1.png"
+                    alt="person"
+                  />
+                </div>
               </div>
-              <div class="testomonial__cardContentImg">
-                <img src="./assets/images/testomonial__img2.png" alt="person" />
+              <div class="testomonial__card">
+                <div class="testomonial__cardContent">
+                  <p>
+                    Wise busy past both park when an ye no. Nay likely her
+                    length sooner thrown sex lively income. The expense windows
+                    . Blessing welcomed ladyship.
+                  </p>
+                  <p>- Mike Taylor, Web Designer</p>
+                </div>
+                <div class="testomonial__cardContentImg">
+                  <img
+                    src="./assets/images/testomonial__img2.png"
+                    alt="person"
+                  />
+                </div>
+              </div>
+
+              <div class="testomonial__card">
+                <div class="testomonial__cardContent">
+                  <p>
+                    Wise busy past both park when an ye no. Nay likely her
+                    length sooner thrown sex lively income. The expense windows
+                    . Blessing welcomed ladyship.
+                  </p>
+                  <p>- Mike Taylor, Web Designer</p>
+                </div>
+                <div class="testomonial__cardContentImg">
+                  <img
+                    src="./assets/images/testomonial__img1.png"
+                    alt="person"
+                  />
+                </div>
+              </div>
+              <div class="testomonial__card">
+                <div class="testomonial__cardContent">
+                  <p>
+                    Wise busy past both park when an ye no. Nay likely her
+                    length sooner thrown sex lively income. The expense windows
+                    . Blessing welcomed ladyship.
+                  </p>
+                  <p>- Mike Taylor, Web Designer</p>
+                </div>
+                <div class="testomonial__cardContentImg">
+                  <img
+                    src="./assets/images/testomonial__img2.png"
+                    alt="person"
+                  />
+                </div>
               </div>
             </div>
           </div>
+          <div class="carousel__dots"></div>
         </div>
       </section>
       <!-- Rating Banner Section -->
