logic for FAQ to show and hide content is done

--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@
             <div class="FAQ__content">
               <p>
                 The expense windows adapted sir. Wrong widen drawn.
-                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-plus FAQ__button"></i>
               </p>
-              <p>
+              <p class="FAQ__clickContent">
                 Offending belonging promotion provision an be oh consulted
                 ourselves it. Blessing welcomed ladyship she met humoured sir
                 breeding her.
@@ -520,9 +520,9 @@
             <div class="FAQ__content">
               <p>
                 Six curiosity day assurance bed necessary?
-                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-plus FAQ__button"></i>
               </p>
-              <p>
+              <p class="FAQ__clickContent">
                 Offending belonging promotion provision an be oh consulted
                 ourselves it. Blessing welcomed ladyship she met humoured sir
                 breeding her.
@@ -531,9 +531,9 @@
             <div class="FAQ__content">
               <p>
                 Produce say the ten moments parties?
-                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-plus FAQ__button"></i>
               </p>
-              <p>
+              <p class="FAQ__clickContent">
                 Offending belonging promotion provision an be oh consulted
                 ourselves it. Blessing welcomed ladyship she met humoured sir
                 breeding her.
@@ -542,9 +542,9 @@
             <div class="FAQ__content">
               <p>
                 Simple innate summer fat appear basket his desire joy?
-                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-plus FAQ__button"></i>
               </p>
-              <p>
+              <p class="FAQ__clickContent">
                 Offending belonging promotion provision an be oh consulted
                 ourselves it. Blessing welcomed ladyship she met humoured sir
                 breeding her.
@@ -553,9 +553,9 @@
             <div class="FAQ__content">
               <p>
                 Outward clothes promise at gravity do excited?
-                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-plus FAQ__button"></i>
               </p>
-              <p>
+              <p class="FAQ__clickContent">
                 Offending belonging promotion provision an be oh consulted
                 ourselves it. Blessing welcomed ladyship she met humoured sir
                 breeding her.
