responsive design for small screen done

--- a/index.html
+++ b/index.html
@@ -49,6 +49,43 @@
           <button>Sigin</button>
           <button>Start Free</button>
         </div>
+        <i class="fa-solid fa-bars nav__toggle"></i>
+        <!-- For small screen -->
+        <aside class="nav__sideBar">
+          <button class="close-btn">&times;</button>
+          <nav class="nav__sideMenu">
+            <ul class="nav__sideList">
+              <li class="dropdown">
+                <a href="#" class="dropdown__toggle"
+                  >Product
+                  <i class="fa-solid fa-angle-down"></i>
+                </a>
+                <ul class="dropdown__menu">
+                  <li><a href="#">Product 1</a></li>
+                  <li><a href="#">Product 2</a></li>
+                  <li><a href="#">Product 3</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown__toggle"
+                  >Template
+                  <i class="fa-solid fa-angle-down"></i>
+                </a>
+                <ul class="dropdown__menu">
+                  <li><a href="#">Template A</a></li>
+                  <li><a href="#">Template B</a></li>
+                  <li><a href="#">Template C</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Pricing</a></li>
+            </ul>
+            <div class="nav__sideButtons">
+              <button>Sigin</button>
+              <button>Start Free</button>
+            </div>
+          </nav>
+        </aside>
       </div>
     </header>
     <!-- Main  -->
@@ -250,7 +287,7 @@
               WHY CHOOSE US
             </p>
             <h2>Save money with proper transaction</h2>
-            <p style="width: 60%">
+            <p>
               We so opinion friends me message as delight. Whole front do of
               plate heard oh ought. His defective nor convinced residence own.
             </p>
@@ -324,7 +361,13 @@
                     length sooner thrown sex lively income. The expense windows
                     . Blessing welcomed ladyship.
                   </p>
-                  <p>- Mike Taylor, Web Designer</p>
+                  <p class="img__smScreen">
+                    - Mike Taylor, Web Designer
+                    <img
+                      src="./assets/images/testomonial__img1.png"
+                      alt="person"
+                    />
+                  </p>
                 </div>
                 <div class="testomonial__cardContentImg">
                   <img
@@ -340,7 +383,13 @@
                     length sooner thrown sex lively income. The expense windows
                     . Blessing welcomed ladyship.
                   </p>
-                  <p>- Mike Taylor, Web Designer</p>
+                  <p class="img__smScreen">
+                    - Mike Taylor, Web Designer
+                    <img
+                      src="./assets/images/testomonial__img2.png"
+                      alt="person"
+                    />
+                  </p>
                 </div>
                 <div class="testomonial__cardContentImg">
                   <img
@@ -356,7 +405,13 @@
                     length sooner thrown sex lively income. The expense windows
                     . Blessing welcomed ladyship.
                   </p>
-                  <p>- Mike Taylor, Web Designer</p>
+                  <p class="img__smScreen">
+                    - Mike Taylor, Web Designer
+                    <img
+                      src="./assets/images/testomonial__img1.png"
+                      alt="person"
+                    />
+                  </p>
                 </div>
                 <div class="testomonial__cardContentImg">
                   <img
@@ -372,7 +427,13 @@
                     length sooner thrown sex lively income. The expense windows
                     . Blessing welcomed ladyship.
                   </p>
-                  <p>- Mike Taylor, Web Designer</p>
+                  <p class="img__smScreen">
+                    - Mike Taylor, Web Designer
+                    <img
+                      src="./assets/images/testomonial__img2.png"
+                      alt="person"
+                    />
+                  </p>
                 </div>
                 <div class="testomonial__cardContentImg">
                   <img
@@ -389,7 +450,13 @@
                     length sooner thrown sex lively income. The expense windows
                     . Blessing welcomed ladyship.
                   </p>
-                  <p>- Mike Taylor, Web Designer</p>
+                  <p class="img__smScreen">
+                    - Mike Taylor, Web Designer
+                    <img
+                      src="./assets/images/testomonial__img1.png"
+                      alt="person"
+                    />
+                  </p>
                 </div>
                 <div class="testomonial__cardContentImg">
                   <img
@@ -405,7 +472,13 @@
                     length sooner thrown sex lively income. The expense windows
                     . Blessing welcomed ladyship.
                   </p>
-                  <p>- Mike Taylor, Web Designer</p>
+                  <p class="img__smScreen">
+                    - Mike Taylor, Web Designer
+                    <img
+                      src="./assets/images/testomonial__img2.png"
+                      alt="person"
+                    />
+                  </p>
                 </div>
                 <div class="testomonial__cardContentImg">
                   <img
@@ -425,7 +498,8 @@
           <div class="banner__content">
             <p>We speak with our powerfull statistics</p>
           </div>
-          <div class="vertical-line"></div>
+          <div class="vertical__line"></div>
+          <hr class="horizontal__line" />
           <div class="banner__ratings">
             <div class="banner__rating">
               <h2>1M+</h2>
